fix the alignment of the login card

--- a/src/Components/Sistema/Login/login.scss
+++ b/src/Components/Sistema/Login/login.scss
@@ -5,12 +5,13 @@
   height: 100vh;
   width: 100vw;
   justify-content: center;
+  align-items: center;
 }
 
 
 .containerLogin {
   margin-top: 6px;
-  width: 98vw;
+  width: 80vw;
   height: 58vh;
   display: flex;
   background-color: #fff;
